--- a/package.json
+++ b/package.json
@@ -15,18 +15,28 @@
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.11",
+    "@mui/material": "^5.11.12",
+    "@mui/styled-engine-sc": "^5.11.11",
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "formik": "^2.2.9",
     "next": "^13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.5"
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
+    "styled-components": "^5.3.8",
+    "vazirmatn": "^33.0.3",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/node": "^18.15.0",
+    "@types/react": "^18.0.28",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.5"
   }
 }
