--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/styled-engine-sc": "^5.11.11",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "downshift": "^7.4.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "formik": "^2.2.9",
