--- a/package.json
+++ b/package.json
@@ -14,17 +14,23 @@
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
+    "@headlessui/react": "^1.7.13",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
     "@mui/styled-engine-sc": "^5.11.11",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "downshift": "^7.4.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "formik": "^2.2.9",
+    "google-translate-api": "^2.3.0",
+    "html-react-parser": "^3.0.13",
+    "moment": "^2.29.4",
     "next": "^13.2.3",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
