--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
+    "chartjs-adapter-moment": "^1.0.1",
     "downshift": "^7.4.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
