--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "google-translate-api": "^2.3.0",
     "html-react-parser": "^3.0.13",
     "moment": "^2.29.4",
+    "moment-jalaali": "^0.9.6",
     "next": "^13.2.3",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
