--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "formik": "^2.2.9",
     "google-translate-api": "^2.3.0",
     "html-react-parser": "^3.0.13",
+    "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "moment-jalaali": "^0.9.6",
     "next": "^13.2.3",
@@ -36,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.2",
     "styled-components": "^5.3.8",
     "vazirmatn": "^33.0.3",
     "yup": "^1.0.2"
