--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.8",
+    "swiper": "^9.1.1",
     "vazirmatn": "^33.0.3",
     "yup": "^1.0.2"
   },
